<resources>
    <string name="app_name" translatable="false">AutoRoom</string>
    <string name="welcome">Bienvenido a AutoRoom. </string>
    <string name="iluminaci_n">Iluminación</string>
    <string name="general">General</string>
    <string name="mesa">Mesa</string>
    <string name="cama">Cama</string>
    <string name="sensores">Sensores</string>
    <string name="movimiento" translatable="true">Movimiento</string>
    <string name="temp_interior">Temp Interior</string>
    <string name="temp_exterior">Temp Exterior</string>
    <string name="init">INIT</string>
    <string name="led_s">LED´s</string>
    <string name="auto">Auto</string>
    <string name="clickar">Clickar</string>
    <string name="connect">Última conexión</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">El campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="comfort">Comfort</string>
    <string name="sistema">Ajustes</string>
    <string name="led_sName">Led´s</string>
    <string name="calor">Calor</string>
    <string name="fr_o">Frío</string>
    <string name="acerca_de">Acerca de</string>
    <string name="contacto">Graficos</string>
    <string name="cerrar">Cerrar</string>
    <string name="alarma_intruso">Alarma Intruso</string>
    <string name="alarma">Alarma</string>
    <string name="estado">Estado</string>
    <string name="salir">Salir</string>
    <string name="modoaireLabel">Modo</string>
    <string name="default_notification_channel_id">lupoxan.autoroom.com.autoroom11</string>
    <string name="picamserver">PiCamServer</string>
    <string name="raspicam">RaspiCam</string>
    <string name="led_s_verdes">Verdes</string>
    <string name="verdes">Verdes</string>
    <string name="apagados">Apagados</string>
    <string name="encendidos">Encendidos</string>
    <string name="led_s_rojos">Rojos</string>
    <string name="rojos">Rojos</string>
    <string name="blanco_izquierda">Blanco Izquierda</string>
    <string name="blanco_derecha">Blanco Derecha</string>
    <string name="blanco_cama">Blanco Cama</string>
    <string name="fading">Fading</string>
    <string name="blinking">Parpadeo</string>
    <string name="action_settings">Ajustes</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="celsius">%02d ºC</string>
    <string name="appwidget_text">Temperaturas</string>
    <string name="configure">Temps</string>
    <string name="add_widget">Hecho</string>
    <string name="tempInt">Interior</string>
    <string name="tempExt">Exterior</string>
    <string name="iluminacion">Iluminación</string>
    <string name="climatizaci_n">Climatización</string>
    <string name="massigno">+</string>
    <string name="menossigno">-</string>
    <string name="espacio">\t\t\t\t\t\t\t</string>
    <string name="mesaAuto">Mesa Auto</string>
    <string name="camaAuto">Cama Auto</string>
    <string name="upAuto">Up Auto</string>
    <string name="consigna">Consigna</string>
    <string name="leds">Leds</string>
    <string name="seguro">¿Seguro?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cerrarSession">Cerrar Sesión</string>
    <string name="coolMode">Modo guai</string>
    <string name="control">Control</string>
    <string name="fadingTime">Tiempo Fade</string>
    <string name="blinkTime">Tiempo parpadeo</string>
    <string name="datos">Recuperando datos …</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automático</string>
    <string name="voz">Control por voz</string>
    <string name="mesa_on">Mesa On</string>
    <string name="mesa_off">Mesa Off</string>
    <string name="cama_on">Cama On</string>
    <string name="cama_off">Cama Off</string>
    <string name="up_on">General On</string>
    <string name="up_off">General Off</string>
    <string name="encenderMesa">Encendiendo la mesa</string>
    <string name="apagarMesa">Apagando la mesa</string>
    <string name="encenderCama">Encendiendo la cama</string>
    <string name="apagarCama">Apagando la cama</string>
    <string name="encenderUp">Encendiendo la general</string>
    <string name="apagarUp">Apagando la general</string>
    <string name="again">Prueba otra vez</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="create_new_account">Crear nueva cuenta</string>
    <string name="lupoxan_2018">©2018 - LupoXan</string>
    <string name="acc">Accediendo</string>
    <string name="dataa">Recuperando datos …</string>
    <string name="error_usuario_existente">Este usuario ya existe</string>
    <string name="error_registro_usuario">Error al registrar el usuario</string>
    <string name="error_inicio_usuario">Error al iniciar el usuario</string>
    <string name="usuario_registrado">Usuario registrado</string>
    <string name="registrando">Registrando usuario</string>
    <string name="userName">%s</string>
    <string name="pre">Premium</string>
    <string name="seleccionarImage">Fondo</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="lista_de_valores">Lista de valores</string>
    <string name="hora">Hora</string>
    <string name="building">En construcción</string>
    <string name="apagar_todos">Apagar Todos</string>
    <string name="m_s">Más</string>
    <string name="main_name">Nombre principal</string>
    <string name="noData">No hay datos</string>
    <string name="color_gauge">Color Toolbar</string>
    <string name="colors">Colores</string>
    <string name="notifications">Notificaciones</string>
    <string name="choose_notifications">Elegir notificaciones</string>
    <string name="modo">Modo Leds</string>
    <string name="temperatures">Temperaturas Habitación</string>
    <string name="dht11LabelValue">Humedad y temperatura Exteriores</string>
    <string name="humidity">Humedad</string>
    <string name="heatIndex">Sensación Térmica</string>
    <string name="living">Salita</string>
    <string name="room">Habitación</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreen</string>
    <string name="dummy_content" translatable="false">from\nAutoRoom</string>
    <string name="hoy">Hoy</string>
    <string name="date_picker">Elegir Fecha</string>
    <string name="enabledAlarm">Activada</string>
    <string name="disabledAlarm">Desactivada</string>
    <string name="ventilador">Ventilador</string>
    <string name="ventilador_calefactor">Ventilador/Calefactor</string>
    <string name="exterior">Exterior</string>
    <string name="choosing">Elige una habitación</string>
    <string name="connected">Conectado</string>
    <string name="disconnected">Desconectado</string>
    <string name="caseta">Caseta</string>
    <string name="weather">La temperatura exterior es %s grados y la humedad es %s</string>
    <string name="sure">¿Estás seguro?</string>
</resources>
