<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo144" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="131dp"
            tools:targetApi="o" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="179dp"
            tools:targetApi="o" />
    </FrameLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/backboton"
        android:fontFamily="serif"
        android:text="@string/log_in"
        android:textColor="@color/Verde_seek"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="303dp"
        tools:layout_editor_absoluteY="249dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/backboton"
        android:fontFamily="serif"
        android:text="@string/create_new_account"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="307dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/subTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/negroMio"
        android:padding="3dp"
        android:text="@string/lupoxan_2018"
        android:textAlignment="textEnd"
        android:textColor="@color/titulo"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>