<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/horaLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B4B4B4"
            android:text="@string/hora"
            android:textAlignment="center"
            android:textColor="#2E9AFE"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#B5A5D6A7"
                android:text="@string/movimiento"
                android:textAlignment="center"
                android:textColor="#008577"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#B5A5D6A7"
                android:text="@string/tempExt"
                android:textAlignment="center"
                android:textColor="#008577"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/intLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#B5A5D6A7"
                android:text="@string/tempInt"
                android:textAlignment="center"
                android:textColor="#008577"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>