<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background"
        android:keepScreenOn="true"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            style="@android:style/Widget.Holo.Light.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/espacio"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/sensorsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Blanco_seeek"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="serif"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/sensores"
                    android:textAlignment="center"
                    android:textColor="@color/negroMio"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <include layout="@layout/sensors_frame"/>

                <TextView
                    android:id="@+id/lightLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Blanco_seeek"
                    android:fontFamily="serif"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/iluminaci_n"
                    android:textAlignment="center"
                    android:textColor="@color/negroMio"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/camaAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cama"
                    android:textAlignment="center"
                    android:textColor="@color/Comfort"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/valor_cama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ligths2" />

                    <Switch
                        android:id="@+id/autoCamaSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="2"
                        android:background="@drawable/backboton"
                        android:clickable="false"
                        android:fontFamily="serif"
                        android:padding="8dp"
                        android:text="@string/auto"
                        android:textColor="@color/md_black_1000"
                        android:textStyle="bold"
                        android:typeface="serif" />

                </LinearLayout>

                <TextView
                    android:id="@+id/lucesAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mesa"
                    android:textAlignment="center"
                    android:textColor="@color/Comfort"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <LinearLayout
                    android:id="@+id/ilumAuto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/valor_mesa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ligths2" />

                    <Switch
                        android:id="@+id/autoMesaSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="2"
                        android:background="@drawable/backboton"
                        android:clickable="false"
                        android:fontFamily="serif"
                        android:padding="8dp"
                        android:text="@string/auto"
                        android:textColor="@color/md_black_1000"
                        android:textStyle="bold"
                        android:typeface="serif" />

                </LinearLayout>

                <TextView
                    android:id="@+id/upAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/general"
                    android:textAlignment="center"
                    android:textColor="@color/Comfort"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/valor_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ligths2" />

                    <Switch
                        android:id="@+id/autoUpSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="2"
                        android:background="@drawable/backboton"
                        android:clickable="false"
                        android:fontFamily="serif"
                        android:padding="8dp"
                        android:text="@string/auto"
                        android:textColor="@color/md_black_1000"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:typeface="serif" />

                </LinearLayout>

                <TextView
                    android:id="@+id/comfortsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Blanco_seeek"
                    android:fontFamily="serif"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/comfort"
                    android:textAlignment="center"
                    android:textColor="@color/negroMio"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/modoaireLabel"
                    android:textAlignment="textStart"
                    android:textColor="#808FE4"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/comfortMode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/init"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/consigna"
                    android:textAlignment="textStart"
                    android:textColor="#808FE4"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/consigna_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/init"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/ventilador_calefactor"
                    android:textColor="#808FE4"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fanValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/init"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Blanco_seeek"
                    android:fontFamily="serif"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/leds"
                    android:textAlignment="center"
                    android:textColor="#0C0303"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <include layout="@layout/leds_fragment"/>

                <CheckBox
                    android:id="@+id/premiumBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Blanco_seeek"
                    android:clickable="false"
                    android:enabled="true"
                    android:text="@string/pre"
                    android:textAlignment="center"
                    android:textColor="@color/negroMio"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/negroMio"
        android:maxHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/toolbarmain_fragment"/>

    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>